import React from "react";
import { View, Text } from "react-native";

const LobbyHeader = () => {
  return (
    <View className=" pb-10 m-4 justify-center items-center">
      <Text className="text-white text-2xl font-black">LOBBY</Text>
    </View>
  );
};

export default LobbyHeader;