appId: com.axe.l.r.drinkup
---
- launchApp

- tapOn: "LANCER LA PARTIE"

- assertVisible: "MODES DE JEU"
- tapOn: "Choisir"
 
- assertVisible: "LOBBY"

- repeat:
    times: 5
    commands:
      - tapOn: "Nom du joueur"
      - inputRandomPersonName
      - pressKey: Enter

- tapOn: "ON EST PRET !"

- repeat:
    while:
      notVisible: "Classement"
    commands:
      - tapOn: "TOUR SUIVANT"