appId: com.axe.l.r.drinkup
---
- launchApp
- tapOn: "LANCER LA PARTIE"

- assertVisible: "MODES DE JEU"
- tapOn: "Choisir"

- assertVisible: "LOBBY"
- tapOn: "Nom du joueur"
- inputText: "test"
- pressKey: Enter
- assertVisible: "test"
- tapOn:
    id: "trashButton"
- assertNotVisible: "test"
- tapOn: "Nom du joueur"
- inputText: "test"
- pressKey: Enter
- assertVisible: "test"
- stopApp